--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "lib": [
+      "es2015"
+    ]
   }
 }
