--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "build:watch": "tsc --watch",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "James Quigley",
   "license": "MIT",
