--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axosoft/glo-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "JavaScript SDK for GitKraken Glo APIs",
   "main": "dist/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "build:watch": "tsc --watch",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepublish": "yarn build && yarn test"
+    "prepublishOnly": "yarn build"
   },
   "author": "James Quigley",
   "license": "MIT",
