--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axosoft/glo-sdk",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "JavaScript SDK for GitKraken Glo APIs",
   "main": "dist/index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.2",
+    "@types/node": "^11.9.3",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.1",
     "typescript": "^3.0.3"
